--- a/refs.bib
+++ b/refs.bib
@@ -1,6 +1,6 @@
 @article{zyl2009sensor,
   title={The sensor web: systems of sensor systems},
-  author={van Zyl, TL and Simonis, Ingo and McFerren, Graeme},
+  author={Zyl, TL van and Simonis, Ingo and McFerren, Graeme},
   journal={International Journal of Digital Earth},
   volume={2},
   number={1},
@@ -11,7 +11,7 @@
 
 @article{di2010earth,
   title={Earth observation sensor web: An overview},
-  author={Di, Liping and Moe, Karen and van Zyl, TL},
+  author={Di, Liping and Moe, Karen and van Zyl, Terence L},
   journal={IEEE Journal of Selected Topics in Applied Earth Observations and Remote Sensing},
   volume={3},
   number={4},
@@ -354,7 +354,12 @@
 @article{maake2020applications,
   title={Applications of Machine Learning to Estimating the Sizes and Market Impact of Hidden Orders in the BRICS Financial Markets},
   author={Maake, Witness and Van Zyl, Terence},
-  year={2020}
+  journal={Journal of Advanced Studies in Finance},
+  volume={11},
+  number={1(21)},
+  pages={28--64},
+  year={2020},
+  publisher={ASERS Publishing}
 }
 
 @inproceedings{huo2020unique,
@@ -364,10 +369,10 @@
   year={2020}
 }
 
-@article{perumal2020surrogate,
+@inproceedings{perumal2020surrogate,
   title={Surrogate Assisted Methods for the Parameterisation of Agent-Based Models},
   author={Perumal, Rylan and van Zyl, Terence L},
-  journal={arXiv preprint arXiv:2008.11835},
+  booktitle={arXiv preprint arXiv:2008.11835},
   year={2020}
 }
 
