--- a/content/refs.bib
+++ b/content/refs.bib
@@ -372,7 +372,7 @@
 @inproceedings{perumal2020surrogate,
   title={Surrogate Assisted Methods for the Parameterisation of Agent-Based Models},
   author={Perumal, Rylan and van Zyl, Terence L},
-  booktitle={arXiv preprint arXiv:2008.11835},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   year={2020}
 }
 
@@ -386,7 +386,7 @@
 }
 
 @inproceedings{variawa2020rules,
-  title={A rules-based and Transfer Learning approach for deriving the Hubble type of a galaxy from the Galaxy Zoo data},
+  title={A rules-based and transfer learning approach for deriving the hubble type of a galaxy from the galaxy zoo data},
   author={Variawa, MZ and van Zyl, TL and Woolway, M},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--7},
@@ -422,7 +422,7 @@
 }
 
 @inproceedings{stander2020data,
-  title={Data-Driven Evolutionary Optimisation for the design parameters of a Chemical Process: A Case Study},
+  title={Data-driven evolutionary optimisation for the design parameters of a chemical process: A case study},
   author={Stander, L and Woolway, M and van Zyl, TL},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--8},
@@ -443,7 +443,72 @@
   title={A framework for online investment decisions},
   author={Paskaramoorthy, Andrew B and Gebbie, Tim J and van Zyl, Terence L},
   journal={Investment Analysts Journal},
-  pages={1--17},
+  volume={49},
+  number={3},
+  pages={215--231},
   year={2020},
   publisher={Routledge}
+}
+
+@inproceedings{sooklal2020dricorn,
+  title={DRICORN-K: A Dynamic RIsk CORrelation-driven Non-parametric Algorithm for Online Portfolio Selection},
+  author={Sooklal, Shivaar and van Zyl, Terence L and Paskaramoorthy, Andrew},
+  booktitle={Southern African Conference for Artificial Intelligence Research},
+  pages={183--196},
+  year={2020},
+  organization={Springer, Cham}
+}
+
+@inproceedings{variawa2020comparing,
+  title={Comparing Generalisation Using Crowd-Sourced vs Expert Labels for Galaxies Classification},
+  author={Variawa, MZ and van Zyl, TL and Woolway, M},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  pages={158--162},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{van2020makespan,
+  title={Makespan Minimisation for Multipurpose Batch Plants Using Metaheuristic Approaches},
+  author={van Zyl, TL and Woolway, M},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  pages={56--60},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{dlamini2020automated,
+  title={Automated Identification of Individuals in Wildlife Population Using Siamese Neural Networks},
+  author={Dlamini, Nkosikhona and van Zyl, Terence L},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  pages={224--228},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{huo2020comparative,
+  title={Comparative Analysis of Catastrophic Forgetting in Metric Learning},
+  author={Huo, Jiahao and van Zyl, Terence L},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  pages={68--72},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{stander2020extended,
+  title={Extended Surrogate Assisted Continuous Process Optimisation},
+  author={Stander, L and Woolway, M and van Zyl, TL},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  pages={275--279},
+  year={2020},
+  organization={IEEE}
+}
+
+@inproceedings{mathonsi2020prediction,
+  title={Prediction Interval Construction for Multivariate Point Forecasts Using Deep Learning},
+  author={Mathonsi, Thabang and van Zyl, Terence L},
+  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  pages={88--95},
+  year={2020},
+  organization={IEEE}
 }
