--- a/refs.bib
+++ b/refs.bib
@@ -106,7 +106,7 @@
 }
 
 @inproceedings{van2009using,
-  title={Using sensorml to describe scientific workflows in distributed Web Service environments},
+  title={Using SensorML to describe scientific workflows in distributed Web Service environments},
   author={Van Zyl, Terence and Vahed, Anwar},
   booktitle={2009 IEEE International Geoscience and Remote Sensing Symposium},
   volume={5},
@@ -126,7 +126,7 @@
 }
 
 @phdthesis{van2005integrating,
-  title={Integrating secure resource negotiating agents into telemanufacturing.},
+  title={Integrating Secure Resource Negotiating Agents Into Telemanufacturing},
   author={Van Zyl, Terence Lesley},
   year={2005},
   school={University of Johannesburg}
@@ -256,7 +256,7 @@
 
 @phdthesis{van2010using,
   title={Using self-adaptive software architecture to realise agent ontogeny},
-  author={Van Zyl, Terence L and van Zyl, Terence Lesley},
+  author={Van Zyl, Terence Lesley and van Zyl, Terence Lesley},
   year={2010},
   school={University of Johannesburg}
 }
@@ -290,7 +290,7 @@
 }
 
 @inproceedings{bowditch2019comparative,
-  title={Comparative Metaheuristic Performance for the Scheduling of Multipurpose Batch Plants},
+  title={Comparative metaheuristic performance for the scheduling of multipurpose batch plants},
   author={Bowditch, ZD and Woolway, M and van Zyl, TL},
   booktitle={2019 6th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={121--125},
@@ -317,7 +317,7 @@
 }
 
 @inproceedings{otoo2019systematic,
-  title={A Systematic Review on Big Data Analytics Frameworks for Higher Education-Tools and Algorithms},
+  title={A systematic review on big data analytics frameworks for higher education-tools and algorithms},
   author={Otoo-Arthur, David and Van Zyl, Terence},
   booktitle={Proceedings of the 2019 2nd International Conference on E-Business, Information Management and Computer Science},
   pages={1--9},
@@ -504,11 +504,21 @@
   organization={IEEE}
 }
 
-@inproceedings{mathonsi2020prediction,
-  title={Prediction Interval Construction for Multivariate Point Forecasts Using Deep Learning},
-  author={Mathonsi, Thabang and van Zyl, Terence L},
-  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
-  pages={88--95},
-  year={2020},
-  organization={IEEE}
+@article{sibolla2021determining,
+  title={Determining Real-Time Patterns of Lightning Strikes from Sensor Observations},
+  author={Sibolla, Bolelang H and Van Zyl, Terence and Coetzee, Serena},
+  journal={Journal of Geovisualization and Spatial Analysis},
+  volume={5},
+  number={1},
+  pages={1--18},
+  year={2021},
+  publisher={Springer International Publishing}
+}
+
+@article{burns2020automated,
+  title={Automated Music Recommendations Using Similarity Learning},
+  author={Burns, Jamie and van Zyl, Terence L},
+  journal={SACAIR 2020},
+  pages={288},
+  year={2020}
 }
