--- a/refs.bib
+++ b/refs.bib
@@ -77,9 +77,10 @@
   publisher={Council for Scientific and Industrial Research (CSIR)}
 }
 
-@article{van2009infrastructure,
+@inproceedings{van2009infrastructure,
   title={IT infrastructure enabling open access for flood risk preparedness in South Africa},
   author={Van Zyl, TL and Parbhoo, C and Moodley, D and Cwela, B and Umuhoza, D and Shabangu, P and Vahed, Anwar},
+  booktitle={6th International ISCRAM 2009 Conference},
   year={2009}
 }
 
@@ -150,11 +151,11 @@
   publisher={Taylor \& Francis}
 }
 
-@article{vahed2012harnessing,
+@inproceedings{vahed2012harnessing,
   title={Harnessing cyber-infrastructure for local scale climate change research in Africa},
   author={Vahed, Anwar and Engelbrecht, Francois and Simonis, Ingo and Naidoo, Mogesh and Sibolla, Bolelang and Van Zyl, Terence and McFerren, Graeme},
-  year={2012},
-  publisher={IIMC (International Information Management Corporation)}
+  booktitle={IST-Africa Conference Proceedings},
+  year={2012}
 }
 
 @inproceedings{van2008geoss,
@@ -176,11 +177,11 @@
   year={2008}
 }
 
-@article{van2012beyond,
+@inproceedings{van2012beyond,
   title={Beyond GIS with EO4VisTrails: a geospatio-temporal scientific workflow environment},
   author={Van Zyl, T L},
-  year={2012},
-  publisher={EE Publishers}
+  booktitle={EE Publishers},
+  year={2012}
 }
 
 @article{van2014algorithmic,
@@ -210,9 +211,10 @@
   publisher={CRC Press}
 }
 
-@article{le2013eo2heaven,
+@misc{le2013eo2heaven,
   title={EO2HEAVEN: mitigating environmental health risks},
   author={Le Roux, Wouter J and Du Preez, M and De Klerk, L and Hohls, D and McFerren, G and Vahed, Anwar and Van der Merwe, Martina R and Van Zyl, T},
+  journal={http://publica.fraunhofer.de/documents/N-242024.html},
   year={2013},
   publisher={Fraunhofer-Gesellschaft}
 }
@@ -220,21 +222,22 @@
 @inproceedings{van2014comparison,
   title={A comparison of machine learning techniques for predicting downstream acid mine drainage},
   author={van Zyl, Terence L},
-  year={2014},
-  organization={IGARRS}
-}
-
-@article{butgereit2014fire,
-  title={Fire hazard notifications via Satellite, Twitter, Citizen Reports, and Android Apps},
-  author={Butgereit, Laurie and Moonsamy, Siveshnee and Thomson, Thane and Van Zyl, Terence and McFerren, Graeme},
+  booktitle={IGARRS},
   year={2014}
 }
 
-@article{sibolla2014adding,
+@inproceedings{butgereit2014fire,
+  title={Fire hazard notifications via Satellite, Twitter, Citizen Reports, and Android Apps},
+  author={Butgereit, Laurie and Moonsamy, Siveshnee and Thomson, Thane and Van Zyl, Terence and McFerren, Graeme},
+  booktitle={Proceedings of the African Cyber Citizen Conference},
+  year={2014}
+}
+
+@inproceedings{sibolla2014adding,
   title={Adding temporal data enhancements to the advanced spatial data infrastructure platform},
   author={Sibolla, Bolelang and Van Zyl, Terence and McFerren, Graeme and Hohls, Derek},
-  year={2014},
-  publisher={AARSE2014}
+  booktitle={AARSE2014},
+  year={2014}
 }
 
 @article{sibolla2016towards,
@@ -250,8 +253,8 @@
 @inproceedings{mcferren2016geospatial,
   title={Geospatial data stream processing in Python using FOSS4G components},
   author={McFerren, Graeme and Van Zyl, Terence L},
-  year={2016},
-  organization={ISPRS}
+  booktitle={ISPRS},
+  year={2016}
 }
 
 @phdthesis{van2011using,
