Added Live Research Topics

--- a/public/refs.bib
+++ b/public/refs.bib
@@ -66,7 +66,7 @@
   organization={Springer, Berlin, Heidelberg}
 }
 
-@article{van2008sensor,
+@misc{van2008sensor,
   title={Sensor web technology underpins GEOSS objectives: Applications},
   author={Van Zyl, Terence},
   journal={CSIR Science Scope},
@@ -77,9 +77,10 @@
   publisher={Council for Scientific and Industrial Research (CSIR)}
 }
 
-@article{van2009infrastructure,
+@inproceedings{van2009infrastructure,
   title={IT infrastructure enabling open access for flood risk preparedness in South Africa},
   author={Van Zyl, TL and Parbhoo, C and Moodley, D and Cwela, B and Umuhoza, D and Shabangu, P and Vahed, Anwar},
+  booktitle={6th International ISCRAM 2009 Conference},
   year={2009}
 }
 
@@ -96,10 +97,9 @@
 
 @article{mcferren2012foss,
   title={FOSS geospatial libraries in scientific workflow environments: experiences and directions},
-  author={McFerren, Graeme and Van Zyl, Terence and Vahed, Anwar},
+  author={McFerren, Graeme and van Zyl, Terence and Vahed, Anwar},
   journal={Applied Geomatics},
   volume={4},
-  number={2},
   pages={85--93},
   year={2012},
   publisher={Springer-Verlag}
@@ -126,7 +126,7 @@
 }
 
 @phdthesis{van2008integrating,
-  title={Integrating secure resource negotiating agents into telemanufacturing},
+  title={Integrating Secure Resource Negotiating Agents Into Telemanufacturing},
   author={Van Zyl, Terence Lesley},
   year={2008},
   school={University of Johannesburg (South Africa)}
@@ -150,11 +150,11 @@
   publisher={Taylor \& Francis}
 }
 
-@article{vahed2012harnessing,
+@inproceedings{vahed2012harnessing,
   title={Harnessing cyber-infrastructure for local scale climate change research in Africa},
   author={Vahed, Anwar and Engelbrecht, Francois and Simonis, Ingo and Naidoo, Mogesh and Sibolla, Bolelang and Van Zyl, Terence and McFerren, Graeme},
-  year={2012},
-  publisher={IIMC (International Information Management Corporation)}
+  booktitle={IST-Africa Conference Proceedings},
+  year={2012}
 }
 
 @inproceedings{van2008geoss,
@@ -176,20 +176,11 @@
   year={2008}
 }
 
-@article{van2012beyond,
+@inproceedings{van2012beyond,
   title={Beyond GIS with EO4VisTrails: a geospatio-temporal scientific workflow environment},
   author={Van Zyl, T L},
-  year={2012},
-  publisher={EE Publishers}
-}
-
-@article{van2014algorithmic,
-  title={Algorithmic Design Considerations for Geospatial and/or Temporal Big Data},
-  author={van Zyl, Terence},
-  journal={Big Data: Techniques and Technologies in Geoinformatics},
-  pages={117},
-  year={2014},
-  publisher={CRC Press}
+  booktitle={EE Publishers},
+  year={2012}
 }
 
 @inproceedings{van2013applying,
@@ -201,18 +192,10 @@
   organization={IEEE}
 }
 
-@incollection{van2014machine,
-  title={Machine Learning on Geospatial Big Data},
-  author={van Zyl, Terence L},
-  booktitle={Big Data: Techniques and Technologies in Geoinformatics},
-  pages={133},
-  year={2014},
-  publisher={CRC Press}
-}
-
-@article{le2013eo2heaven,
+@misc{le2013eo2heaven,
   title={EO2HEAVEN: mitigating environmental health risks},
   author={Le Roux, Wouter J and Du Preez, M and De Klerk, L and Hohls, D and McFerren, G and Vahed, Anwar and Van der Merwe, Martina R and Van Zyl, T},
+  journal={http://publica.fraunhofer.de/documents/N-242024.html},
   year={2013},
   publisher={Fraunhofer-Gesellschaft}
 }
@@ -220,38 +203,38 @@
 @inproceedings{van2014comparison,
   title={A comparison of machine learning techniques for predicting downstream acid mine drainage},
   author={van Zyl, Terence L},
-  year={2014},
-  organization={IGARRS}
-}
-
-@article{butgereit2014fire,
-  title={Fire hazard notifications via Satellite, Twitter, Citizen Reports, and Android Apps},
-  author={Butgereit, Laurie and Moonsamy, Siveshnee and Thomson, Thane and Van Zyl, Terence and McFerren, Graeme},
+  booktitle={IGARRS},
   year={2014}
 }
 
-@article{sibolla2014adding,
-  title={Adding temporal data enhancements to the advanced spatial data infrastructure platform},
-  author={Sibolla, Bolelang and Van Zyl, Terence and McFerren, Graeme and Hohls, Derek},
-  year={2014},
-  publisher={AARSE2014}
+@inproceedings{butgereit2014fire,
+  title={Fire hazard notifications via Satellite, Twitter, Citizen Reports, and Android Apps},
+  author={Butgereit, Laurie and Moonsamy, Siveshnee and Thomson, Thane and Van Zyl, Terence and McFerren, Graeme},
+  booktitle={Proceedings of the African Cyber Citizen Conference},
+  year={2014}
 }
 
-@article{sibolla2016towards,
-  title={Towards the development of a taxonomy for visualisation of streamed geospatial data},
+@inproceedings{sibolla2014adding,
+  title={Adding temporal data enhancements to the advanced spatial data infrastructure platform},
+  author={Sibolla, Bolelang and Van Zyl, Terence and McFerren, Graeme and Hohls, Derek},
+  booktitle={AARSE2014},
+  year={2014}
+}
+
+@inproceedings{sibolla2016towards,
+  title={Towards The Development Of A Taxonomy For Visualisation Of Streamed Geospatial Data},
   author={Sibolla, BH and Van Zyl, T and Coetzee, S},
-  journal={ISPRS Annals of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  booktitle={ISPRS Annals of Photogrammetry, Remote Sensing \& Spatial Information Sciences},
   volume={3},
-  pages={129},
-  year={2016},
-  publisher={Copernicus GmbH}
+  number={2},
+  year={2016}
 }
 
 @inproceedings{mcferren2016geospatial,
   title={Geospatial data stream processing in Python using FOSS4G components},
   author={McFerren, Graeme and Van Zyl, Terence L},
-  year={2016},
-  organization={ISPRS}
+  booktitle={ISPRS},
+  year={2016}
 }
 
 @phdthesis{van2011using,
@@ -277,11 +260,11 @@
   number={12},
   pages={475},
   year={2018},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={MDPI}
 }
 
 @inproceedings{kooverjee2020inter,
-  title={Inter-and Intra-domain Knowledge Transfer for Related Tasks in Deep Character Recognition},
+  title={Inter-and intra-domain knowledge transfer for related tasks in deep character recognition},
   author={Kooverjee, Nishai and James, Steven and Van Zyl, Terence},
   booktitle={2020 International SAUPEC/RobMech/PRASA Conference},
   pages={1--6},
@@ -292,7 +275,7 @@
 @inproceedings{bowditch2019comparative,
   title={Comparative metaheuristic performance for the scheduling of multipurpose batch plants},
   author={Bowditch, ZD and Woolway, M and van Zyl, TL},
-  booktitle={2019 6th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  booktitle={2019 6th international conference on soft computing \& machine intelligence (ISCMI)},
   pages={121--125},
   year={2019},
   organization={IEEE}
@@ -308,7 +291,7 @@
 }
 
 @inproceedings{dlamini2019author,
-  title={Author Identification from Handwritten Characters using Siamese CNN},
+  title={Author identification from handwritten characters using Siamese CNN},
   author={Dlamini, Nkosikhona and van Zyl, Terence L},
   booktitle={2019 International Multidisciplinary Information Technology and Engineering Conference (IMITEC)},
   pages={1--6},
@@ -317,7 +300,7 @@
 }
 
 @inproceedings{otoo2019systematic,
-  title={A systematic review on big data analytics frameworks for higher education-tools and algorithms},
+  title={A systematic review on big data analytics frameworks for higher education-Tools and algorithms},
   author={Otoo-Arthur, David and Van Zyl, Terence},
   booktitle={Proceedings of the 2019 2nd International Conference on E-Business, Information Management and Computer Science},
   pages={1--9},
@@ -343,7 +326,7 @@
 }
 
 @inproceedings{perumal2020comparison,
-  title={Comparison of Recurrent Neural Network Architectures for Wildfire Spread Modelling},
+  title={Comparison of recurrent neural network architectures for wildfire spread modelling},
   author={Perumal, Rylan and van Zyl, Terence L},
   booktitle={2020 International SAUPEC/RobMech/PRASA Conference},
   pages={1--6},
@@ -377,17 +360,17 @@
 }
 
 @inproceedings{otoo2020scalable,
-  title={A Scalable Heterogeneous Big Data Framework for e-Learning Systems},
+  title={A scalable heterogeneous big data framework for e-learning systems},
   author={Otoo-Arthur, David and van Zyl, Terence L},
-  booktitle={2020 International Conference on Artificial Intelligence, Big Data, Computing and Data Communication Systems (icABCD)},
+  booktitle={2020 international conference on artificial intelligence, big data, computing and data communication systems (icABCD)},
   pages={1--15},
   year={2020},
   organization={IEEE}
 }
 
 @inproceedings{variawa2020rules,
-  title={A rules-based and transfer learning approach for deriving the hubble type of a galaxy from the galaxy zoo data},
-  author={Variawa, MZ and van Zyl, Terence L and Woolway, Matthew},
+  title={A rules-based and transfer learning approach for deriving the Hubble type of a galaxy from the galaxy zoo data},
+  author={Variawa, Mohamed Zayyan and van Zyl, Terence L and Woolway, Matthew},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--7},
   year={2020},
@@ -395,8 +378,8 @@
 }
 
 @inproceedings{van2020unique,
-  title={Unique Animal Identification using Deep Transfer Learning For Data Fusion in Siamese Networks},
-  author={Van Zyl, Terence L and Woolway, Matthew and Engelbrecht, B},
+  title={Unique animal identification using deep transfer learning for data fusion in siamese networks},
+  author={Van Zyl, Terence L and Woolway, Matthew and Engelbrecht, Bryce},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--6},
   year={2020},
@@ -404,7 +387,7 @@
 }
 
 @inproceedings{lange2020predicting,
-  title={Predicting Particle Fineness in a Cement Mill},
+  title={Predicting particle fineness in a cement mill},
   author={Lange, Rowan and Lange, Tony and van Zyl, Terence L},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--8},
@@ -413,7 +396,7 @@
 }
 
 @inproceedings{atherfold2020method,
-  title={A Method for Dissolved Gas Forecasting in Power Transformers Using LS-SVM},
+  title={A method for dissolved gas forecasting in power transformers using ls-svm},
   author={Atherfold, J and Van Zyl, Terence L},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--8},
@@ -423,7 +406,7 @@
 
 @inproceedings{stander2020data,
   title={Data-driven evolutionary optimisation for the design parameters of a chemical process: A case study},
-  author={Stander, L and Woolway, Matthew and van Zyl, TL},
+  author={Stander, Liezl and Woolway, Matthew and van Zyl, Terence L},
   booktitle={2020 IEEE 23rd International Conference on Information Fusion (FUSION)},
   pages={1--8},
   year={2020},
@@ -460,7 +443,7 @@
 }
 
 @inproceedings{variawa2020comparing,
-  title={Comparing Generalisation Using Crowd-Sourced vs Expert Labels for Galaxies Classification},
+  title={Comparing generalisation using crowd-sourced vs expert labels for galaxies classification},
   author={Variawa, MZ and van Zyl, TL and Woolway, M},
   booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={158--162},
@@ -469,25 +452,25 @@
 }
 
 @inproceedings{van2020makespan,
-  title={Makespan Minimisation for Multipurpose Batch Plants Using Metaheuristic Approaches},
+  title={Makespan minimisation for multipurpose batch plants using metaheuristic approaches},
   author={van Zyl, TL and Woolway, M},
-  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  booktitle={2020 7th international conference on soft computing \& machine intelligence (ISCMI)},
   pages={56--60},
   year={2020},
   organization={IEEE}
 }
 
 @inproceedings{dlamini2020automated,
-  title={Automated Identification of Individuals in Wildlife Population Using Siamese Neural Networks},
+  title={Automated identification of individuals in wildlife population using siamese neural networks},
   author={Dlamini, Nkosikhona and van Zyl, Terence L},
-  booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  booktitle={2020 7th international conference on soft computing \& machine intelligence (ISCMI)},
   pages={224--228},
   year={2020},
   organization={IEEE}
 }
 
 @inproceedings{huo2020comparative,
-  title={Comparative Analysis of Catastrophic Forgetting in Metric Learning},
+  title={Comparative analysis of catastrophic forgetting in metric learning},
   author={Huo, Jiahao and van Zyl, Terence L},
   booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={68--72},
@@ -496,7 +479,7 @@
 }
 
 @inproceedings{stander2020extended,
-  title={Extended Surrogate Assisted Continuous Process Optimisation},
+  title={Extended surrogate assisted continuous process optimisation},
   author={Stander, L and Woolway, M and van Zyl, TL},
   booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={275--279},
@@ -509,7 +492,6 @@
   author={Sibolla, Bolelang H and Van Zyl, Terence and Coetzee, Serena},
   journal={Journal of Geovisualization and Spatial Analysis},
   volume={5},
-  number={1},
   pages={1--18},
   year={2021},
   publisher={Springer International Publishing}
@@ -524,7 +506,7 @@
 }
 
 @inproceedings{mathonsi2020prediction,
-  title={Prediction Interval Construction for Multivariate Point Forecasts Using Deep Learning},
+  title={Prediction interval construction for multivariate point forecasts using deep learning},
   author={Mathonsi, Thabang and van Zyl, Terence L},
   booktitle={2020 7th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={88--95},
@@ -541,13 +523,8 @@
   organization={IEEE}
 }
 
-@article{vanbig,
-  title={Big Earth Observation Data Analytics ICTs for Digital Earth},
-  author={van Zyl, TL}
-}
-
 @inproceedings{oni2020comparative,
-  title={A Comparative Study of Ensemble Approaches to Fact-Checking for the FEVER Shared Task},
+  title={A comparative study of ensemble approaches to fact-checking for the fever shared task},
   author={Oni, Oluwabamigbe O and van Zyl, Terence L},
   booktitle={2020 IEEE Asia-Pacific Conference on Computer Science and Data Engineering (CSDE)},
   pages={1--8},
@@ -555,17 +532,10 @@
   organization={IEEE}
 }
 
-@inproceedings{paskaramoorthy2021efficient,
-  title={The efficient frontiers of mean-variance portfolio rules under distribution misspecification},
-  author={Paskaramoorthy, Andrew and Gebbie, Tim and van Zyl, Terence},
-  booktitle={arXiv preprint arXiv:2106.10491},
-  year={2021}
-}
-
 @inproceedings{van2021parden,
-  title={ParDen: Surrogate Assisted Hyper-Parameter Optimisation for Portfolio Selection},
-  author={van Zyl, TL and Woolway, Matthew and Paskaramoorthy, Andrew},
-  booktitle={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
+  title={Parden: Surrogate assisted hyper-parameter optimisation for portfolio selection},
+  author={van Zyl, Terence L and Woolway, Matthew and Paskaramoorthy, Andrew},
+  booktitle={2021 8th international conference on soft computing \& machine intelligence (ISCMI)},
   pages={101--107},
   year={2021},
   organization={IEEE}
@@ -582,7 +552,7 @@
 }
 
 @inproceedings{cawood2021feature,
-  title={Feature-weighted Stacking for Nonseasonal Time Series Forecasts: A Case Study of the COVID-19 Epidemic Curves},
+  title={Feature-weighted stacking for nonseasonal time series forecasts: A case study of the COVID-19 epidemic curves},
   author={Cawood, Pieter and van Zyl, Terence L},
   booktitle={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={53--59},
@@ -590,22 +560,24 @@
   organization={IEEE}
 }
 
-@article{perumal2021surrogate,
-  title={Surrogate Assisted Strategies (The Parameterisation of an Infectious Disease Agent-Based Model)},
-  author={Perumal, Rylan and van Zyl, Terence L},
-  journal={arXiv preprint arXiv:2108.08809},
-  year={2021}
+@article{perumal2022surrogate,
+  title={Surrogate-assisted strategies: the parameterisation of an infectious disease agent-based model},
+  author={Perumal, Rylan and Zyl, Terence L van},
+  journal={Neural Computing and Applications},
+  pages={1--12},
+  year={2022},
+  publisher={Springer London London}
 }
 
 @article{dlamini2021comparing,
-  title={Comparing Class-Aware and Pairwise Loss Functions for Deep Metric Learning in Wildlife Re-Identification},
+  title={Comparing class-aware and pairwise loss functions for deep metric learning in wildlife re-identification},
   author={Dlamini, Nkosikhona and van Zyl, Terence L},
   journal={Sensors},
   volume={21},
   number={18},
   pages={6109},
   year={2021},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={MDPI}
 }
 
 @inproceedings{huo2021incremental,
@@ -617,7 +589,7 @@
 
 @article{mathonsi2022multivariate,
   title={Multivariate anomaly detection based on prediction intervals constructed using deep learning},
-  author={Mathonsi, Thabang and Zyl, Terence L van},
+  author={Mathonsi, Thabang and van Zyl, Terence L},
   journal={Neural Computing and Applications},
   pages={1--15},
   year={2022},
@@ -665,7 +637,7 @@
 }
 
 @inproceedings{laher2021deep,
-  title={Deep Learning for Financial Time Series Forecast Fusion and Optimal Portfolio Rebalancing},
+  title={Deep learning for financial time series forecast fusion and optimal portfolio rebalancing},
   author={Laher, Siddeeq and Paskaramoorthy, Andrew and Van Zyl, Terence L},
   booktitle={2021 IEEE 24th International Conference on Information Fusion (FUSION)},
   pages={1--8},
@@ -681,7 +653,7 @@
   number={1},
   pages={1--25},
   year={2022},
-  publisher={Multidisciplinary Digital Publishing Institute}
+  publisher={MDPI}
 }
 
 @inproceedings{kruger2021ama,
@@ -694,10 +666,178 @@
 }
 
 @inproceedings{skeepers2021ma,
-  title={MA-FDRNN: Multi-Asset Fuzzy Deep Recurrent Neural Network Reinforcement Learning for Portfolio Management},
+  title={MA-FDRNN: Multi-asset fuzzy deep recurrent neural network reinforcement learning for portfolio management},
   author={Skeepers, Tarrin and van Zyl, Terence L and Paskaramoorthy, Andrew},
   booktitle={2021 8th International Conference on Soft Computing \& Machine Intelligence (ISCMI)},
   pages={32--37},
   year={2021},
   organization={IEEE}
+}
+
+@incollection{van2014machine,
+  title={Machine learning on geospatial big data},
+  author={van Zyl, Terence L},
+  booktitle={Big Data: Techniques and Technologies in Geoinformatics},
+  pages={133},
+  year={2014},
+  publisher={CRC Press}
+}
+
+@article{freeborough2022investigating,
+  title={Investigating Explainability Methods in Recurrent Neural Network Architectures for Financial Time Series Data},
+  author={Freeborough, Warren and van Zyl, Terence L},
+  journal={Applied Sciences},
+  volume={12},
+  number={3},
+  pages={1427},
+  year={2022},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+@inproceedings{van2022full,
+  title={Full Rotation Hyper-ellipsoid Multivariate Adaptive Bandwidth Kernel Density Estimator},
+  author={van Zyl, Terence L},
+  booktitle={Second Southern African Conference on Artificial Intelligence Research},
+  volume={1342},
+  number={Southern African Conference for Artifici},
+  pages={287--303},
+  year={2022},
+  organization={Springer, Cham}
+}
+
+@inproceedings{paskaramoorthy2021efficient,
+  title={The efficient frontiers of mean-variance portfolio rules under distribution misspecification},
+  author={Paskaramoorthy, Andrew and Gebbie, Tim and Van Zyl, Terence L},
+  booktitle={2021 IEEE 24th International Conference on Information Fusion (FUSION)},
+  pages={1--8},
+  year={2021},
+  organization={IEEE}
+}
+
+@article{variawa2022transfer,
+  title={Transfer learning and deep metric learning for automated galaxy morphology representation},
+  author={Variawa, Mohamed Zayyan and Van Zyl, Terence L and Woolway, Matthew},
+  journal={IEEE Access},
+  volume={10},
+  pages={19539--19550},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{pretorius2022deep,
+  title={Deep Reinforcement Learning and Convex Mean-Variance Optimisation for Portfolio Management},
+  author={Pretorius, Ruan and van Zyl, Terence},
+  journal={arXiv preprint arXiv:2203.11318},
+  year={2022}
+}
+
+@article{cawood2022evaluating,
+  title={Evaluating State of the Art, Forecasting Ensembles-and Meta-learning Strategies for Model Fusion},
+  author={Cawood, Pieter and van Zyl, Terence},
+  journal={Forecasting},
+  volume={4},
+  pages={732--751},
+  year={2022},
+  publisher={MDPI}
+}
+
+@inproceedings{muthivhi2022fusion,
+  title={Fusion of Sentiment and Asset Price Predictions for Portfolio Optimization},
+  author={Muthivhi, Mufhumudzi and van Zyl, Terence L},
+  booktitle={2022 25th International Conference on Information Fusion (FUSION)},
+  pages={1--8},
+  year={2022},
+  organization={IEEE}
+}
+
+@article{kooverjee2022investigating,
+  title={Investigating Transfer Learning in Graph Neural Networks},
+  author={Kooverjee, Nishai and James, Steven and Van Zyl, Terence},
+  journal={Electronics},
+  volume={11},
+  number={8},
+  pages={1202},
+  year={2022},
+  publisher={MDPI}
+}
+
+@inproceedings{manaka2022using,
+  title={Using Machine Learning to Fuse Verbal Autopsy Narratives and Binary Features in the Analysis of Deaths from Hyperglycaemia},
+  author={Manaka, Thokozile and Van Zyl, Terence and Wade, Alisha N and Kar, Deepak},
+  booktitle={Proceedings of SACAIR2021},
+  volume={1},
+  number={1},
+  pages={90--106},
+  year={2022}
+}
+
+@article{stander2022surrogate,
+  title={Surrogate-assisted evolutionary multi-objective optimisation applied to a pressure swing adsorption system},
+  author={Stander, Liezl and Woolway, Matthew and Van Zyl, Terence L},
+  journal={Neural Computing and Applications},
+  pages={1--17},
+  year={2022},
+  publisher={Springer London}
+}
+
+@inproceedings{baard2022twin,
+  title={Twin-Delayed Deep Deterministic Policy Gradient Algorithm for Portfolio Selection},
+  author={Baard, Nicholas and van Zyl, Terence L},
+  booktitle={2022 IEEE Symposium on Computational Intelligence for Financial Engineering and Economics (CIFEr)},
+  pages={1--8},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{paskaramoorthy2022empirical,
+  title={An Empirical Comparison of Cross-Validation Procedures for Portfolio Selection},
+  author={Paskaramoorthy, Andrew and van Zyl, Terence L and Gebbie, Tim},
+  booktitle={2022 IEEE Symposium on Computational Intelligence for Financial Engineering and Economics (CIFEr)},
+  pages={1--10},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{mudau2022application,
+  title={Application of Convolutional Neural Networks to the Quantification of Tick Burdens on Cattle Using Infrared Thermographic Imaging},
+  author={Mudau, Fhulufhelo and Van Zyl, Terence L and Molotsi, Annelin H and Waldmann, Patrik and Dzama, Kennedy and Marufu, Munyaradzi C},
+  booktitle={2022 IST-Africa Conference (IST-Africa)},
+  pages={1--9},
+  year={2022},
+  organization={IEEE}
+}
+
+@inproceedings{muthivhi2022multi,
+  title={Multi-modal Recommendation System with Auxiliary Information},
+  author={Muthivhi, Mufhumudzi and van Zyl, Terence and Wang, Hairong},
+  booktitle={Artificial Intelligence Research: Third Southern African Conference, SACAIR 2022, Stellenbosch, South Africa, December 5--9, 2022, Proceedings},
+  pages={108--122},
+  year={2022},
+  organization={Springer Nature Switzerland Cham}
+}
+
+@incollection{van2014algorithmic,
+  title={Algorithmic design considerations for geospatial and/or temporal big data},
+  author={Van Zyl, Terence},
+  booktitle={Big Data: Techniques and Technologies in Geoinformatics, CRC Press, London, UK},
+  pages={117--132},
+  year={2014}
+}
+
+@inproceedings{manaka2022improving,
+  title={Improving Cause-of-Death Classification from Verbal Autopsy Reports},
+  author={Manaka, Thokozile and van Zyl, Terence and Kar, Deepak},
+  booktitle={Artificial Intelligence Research: Third Southern African Conference, SACAIR 2022, Stellenbosch, South Africa, December 5--9, 2022, Proceedings},
+  pages={46--59},
+  year={2022},
+  organization={Springer Nature Switzerland Cham}
+}
+
+@inproceedings{khangamwa2022towards,
+  title={Towards a methodology for addressing missingness in datasets, with an application to demographic health datasets},
+  author={Khangamwa, Gift and van Zyl, Terence and van Alten, Clint J},
+  booktitle={Artificial Intelligence Research: Third Southern African Conference, SACAIR 2022, Stellenbosch, South Africa, December 5--9, 2022, Proceedings},
+  pages={169--186},
+  year={2022},
+  organization={Springer Nature Switzerland Cham}
 }
